sumo/tests/duarouter/errors/false_input_alts/options.duarouter
--net-file=input_net.net.xml --alternative-files=xxx.xml -o routes.rou.xml
